[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ui/scoreboard.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/team_header.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/scoreboard_entry.tscn" type="PackedScene" id=3]

[node name="Scoreboard" type="PopupDialog"]
visible = true
self_modulate = Color( 1, 1, 1, 0.878431 )
margin_left = 178.0
margin_top = 100.0
margin_right = 878.0
margin_bottom = 500.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 692.0
margin_bottom = 392.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Teams" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 684.0
margin_bottom = 14.0
mouse_filter = 2
alignment = 1

[node name="Team1" type="Label" parent="MarginContainer/VBoxContainer/Teams"]
margin_right = 336.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Team 1"
align = 1

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/Teams"]
margin_left = 340.0
margin_right = 344.0
margin_bottom = 14.0
mouse_filter = 2

[node name="Team2" type="Label" parent="MarginContainer/VBoxContainer/Teams"]
margin_left = 348.0
margin_right = 684.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Team 2"
align = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 684.0
margin_bottom = 34.0
mouse_filter = 2
custom_constants/separation = 16

[node name="Players" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 684.0
margin_bottom = 344.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Team1" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Players"]
margin_right = 330.0
margin_bottom = 306.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" parent="MarginContainer/VBoxContainer/Players/Team1" instance=ExtResource( 2 )]
margin_right = 330.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/Players/Team1"]
margin_top = 20.0
margin_right = 330.0
margin_bottom = 24.0
mouse_filter = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/Players"]
margin_left = 334.0
margin_right = 350.0
margin_bottom = 306.0
mouse_filter = 2
custom_constants/separation = 16

[node name="Team2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Players"]
margin_left = 354.0
margin_right = 684.0
margin_bottom = 306.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" parent="MarginContainer/VBoxContainer/Players/Team2" instance=ExtResource( 2 )]
margin_right = 330.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/Players/Team2"]
margin_top = 20.0
margin_right = 330.0
margin_bottom = 24.0
mouse_filter = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 348.0
margin_right = 684.0
margin_bottom = 364.0
mouse_filter = 2
custom_constants/separation = 16

[node name="Totals" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 368.0
margin_right = 684.0
margin_bottom = 384.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Team1Total" parent="MarginContainer/VBoxContainer/Totals" instance=ExtResource( 3 )]
margin_right = 330.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/Totals"]
margin_left = 334.0
margin_right = 350.0
margin_bottom = 16.0
custom_constants/separation = 16

[node name="Team2Total" parent="MarginContainer/VBoxContainer/Totals" instance=ExtResource( 3 )]
margin_left = 354.0
margin_right = 684.0
margin_bottom = 16.0
size_flags_horizontal = 3
